Bug 1845104 Default theme bugs
- removing some redundant styles in default
- inbox message was too long for font to display in single line
- putting some styles back into raw instead
- search form in header wasn't fitting on single line on small device

behatnotneeded

--- a/htdocs/theme/default/sass/components/_arrow-bar.scss
+++ b/htdocs/theme/default/sass/components/_arrow-bar.scss
@@ -1,14 +1,3 @@
-.arrow-bar {
-    .arrow {
-        font-family: $font-family-sans-serif;
-
-        .text {
-          font-weight: 700;
-          color: #333333;
-        }
-    }
-}
-
 .nav-inpage {
     &.nav > li {
         > a, button {
