--- a/htdocs/theme/default/sass/layout/_profile-block.scss
+++ b/htdocs/theme/default/sass/layout/_profile-block.scss
@@ -17,8 +17,5 @@
               background-color: $theme-secondary-color;
             }
         }
-        .card .list-group {
-            border: 0;
-        }
     }
 }
