--- a/htdocs/theme/raw/sass/components/_toggles.scss
+++ b/htdocs/theme/raw/sass/components/_toggles.scss
@@ -58,7 +58,6 @@
         }
         .icon {
             color: $navbar-toggle-color;
-            background-color: $navbar-toggle-bg;
         }
     }
 
