--- a/htdocs/theme/raw/sass/layout/_footer.scss
+++ b/htdocs/theme/raw/sass/layout/_footer.scss
@@ -35,9 +35,6 @@
             clear: both;
             padding-top: 10px;
         }
-        .admin & {
-            padding: 10px;
-        }
     }
     &.upgrade-footer {
         .mahara-logo {
